// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`libk1.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type LibK = {}

=====================================output=====================================
type LibK = {};

================================================================================
`;

exports[`libk2.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type LibK = {
  p: string;
}

=====================================output=====================================
type LibK = { p: string };

================================================================================
`;
